--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <title>RetroCena</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
-    <div class="teste2">
-        <div class="teste">
-            <img src="" alt="">
-            <form action="">
-                <label for="">Nome de Usuário</label>
-                <input type="text" name="" id="">
-                <label for="">Senha</label>
-                <input type="text" name="" id="">
-                <input type="button" value="Login">
-                <span>Ainda não tem conta? Cadastre-se aqui </span>
-            </form>
+    <div class="background">
+        <div class="background2">
+           <div class="logo">
+               <img src="img/logoEstendida.png" />
+                 </div>
+        <form>
+           <label for="nome">Nome de usuário</label>
+           <input type="text" name="none" id="">
+           <label for="">Senha do usuário</label>
+           <input type="text" name="" id="">
+           <button type="submit">Login</button>
+           <a href="pages/cadastro.html">Ainda não tem conta? Cadastre-se aqui</a>
+        </form>
         </div>
     </div>
 </body>
-
 </html>
