--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
            <input type="password" placeholder="Digite sua senha:" id="senha" name="senha" required>
            <button class="login" type="submit" href="/pages/home.html">Login</button>
            <a href="pages/cadastro.html">Ainda não tem conta? Cadastre-se aqui</a>
-           <a>Esqueceu sua senha?</a>
+           <a href="/pages/home.html">Esqueceu sua senha?</a>
         </form>
         </div>
       </div>
