--- a/pages/home.html
+++ b/pages/home.html
@@ -10,11 +10,25 @@
 <body>
    <div class="flex" >         
                 <!-- Logo -->
-                <div class="logo">
-                    <img src="/img/logoLongaW.png" />
-                    
-                </div>
-        <h1>ALAAAAAAALLA</h1>
+      <div class="logo">
+           <img src="/img/logoLongaW.png" />
+               </div>
+                 <div class=" banner">
+                  <img src="/img/tela-inicial/minha-mae-e-uma-peca.png" />
+                    </div>  
+                     <div class="listas">
+                      <img src="/img/tela-inicial/depois-do-universo.png"/>
+                      <img src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png "/>
+                      <img src="/img/tela-inicial/isolados.png"/>
+                      <img src="/img/tela-inicial/tropa-de-elite.png"/>
+                      <img src="/img/tela-inicial/marginal-alad.png"/>
+                      <img src="/img/tela-inicial/sos-fada-manu.png"/>
+                      <img src="/img/tela-inicial/turma-da-monica.png"/>
+                      <img src="/img/tela-inicial/os-farofeiros.png"/>
+                      <img src="/img/tela-inicial/a-magia-de-aruna.png"/>
+                      <img src="/img/tela-inicial/ainda-estou-aqui.png"/>
+            </div> 
+    </div>
   </div>
 </body>
 </html>
