--- a/pages/home.html
+++ b/pages/home.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RetroCena</title>
-    <link rel="icon" type="image/x-icon" href="/img/logo_aba.png" />
-    <link rel="stylesheet" href="/css/home.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RetroCena</title>
+  <link rel="icon" type="image/x-icon" href="/img/logo_aba.png" />
+  <link rel="stylesheet" href="/css/home.css">
 </head>
+
 <body>
-   <div class="flex" >         
-                <!-- Logo -->
-      <div class="logo">
-           <img src="/img/logoLongaW.png" />
-               </div>
-                 <div class=" banner">
-                  <img src="/img/tela-inicial/minha-mae-e-uma-peca.png" />
-                    </div>  
-                     <div class="listas">
-                      <img src="/img/tela-inicial/depois-do-universo.png"/>
-                      <img src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png "/>
-                      <img src="/img/tela-inicial/isolados.png"/>
-                      <img src="/img/tela-inicial/tropa-de-elite.png"/>
-                      <img src="/img/tela-inicial/marginal-alad.png"/>
-                      <img src="/img/tela-inicial/sos-fada-manu.png"/>
-                      <img src="/img/tela-inicial/turma-da-monica.png"/>
-                      <img src="/img/tela-inicial/os-farofeiros.png"/>
-                      <img src="/img/tela-inicial/a-magia-de-aruna.png"/>
-                      <img src="/img/tela-inicial/ainda-estou-aqui.png"/>
-            </div> 
+  <div class="flex">
+    <!-- Logo -->
+    <div class="logo">
+      <img src="/img/logoLongaW.png" />
+    </div>
+    <div class=" banner">
+      <img id="baner1" src="/img/tela-inicial/minha-mae-e-uma-peca.png" />
+      <img id="banner2" src="/img/tela-inicial/central-do-brasil.png" />
+    </div>
+    <div class="listas">
+      <div class="lista">
+        <img src="/img/tela-inicial/depois-do-universo.png" />
+        <img src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png " />
+        <img src="/img/tela-inicial/isolados.png" />
+        <img src="/img/tela-inicial/tropa-de-elite.png" />
+        <img src="/img/tela-inicial/marginal-alad.png" />
+      </div>
+      <div class="lista">
+        <img src="/img/tela-inicial/sos-fada-manu.png" />
+        <img src="/img/tela-inicial/turma-da-monica.png" />
+        <img src="/img/tela-inicial/os-farofeiros.png" />
+        <img src="/img/tela-inicial/a-magia-de-aruna.png" />
+        <img src="/img/tela-inicial/ainda-estou-aqui.png" />
+      </div>
     </div>
   </div>
+  </div>
 </body>
+
 </html>
