--- a/pages/home.html
+++ b/pages/home.html
@@ -15,24 +15,24 @@
     <div class="logo">
       <img src="/img/logoLongaW.png" />
     </div>
-    <div class=" banner">
+    <div class=" banner la">
       <img id="baner1" src="/img/tela-inicial/minha-mae-e-uma-peca.png" />
       <img id="banner2" src="/img/tela-inicial/central-do-brasil.png" />
     </div>
     <div class="listas">
       <div class="lista">
-        <img src="/img/tela-inicial/depois-do-universo.png" />
-        <img src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png " />
-        <img src="/img/tela-inicial/isolados.png" />
-        <img src="/img/tela-inicial/tropa-de-elite.png" />
-        <img src="/img/tela-inicial/marginal-alad.png" />
+        <img class="listas" src="/img/tela-inicial/depois-do-universo.png" />
+        <img class="listas" src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png " />
+        <img class="listas" src="/img/tela-inicial/isolados.png" />
+        <img class="listas" src="/img/tela-inicial/tropa-de-elite.png" />
+        <img class="listas" src="/img/tela-inicial/marginal-alad.png" />
       </div>
       <div class="lista">
-        <img src="/img/tela-inicial/sos-fada-manu.png" />
-        <img src="/img/tela-inicial/turma-da-monica.png" />
-        <img src="/img/tela-inicial/os-farofeiros.png" />
-        <img src="/img/tela-inicial/a-magia-de-aruna.png" />
-        <img src="/img/tela-inicial/ainda-estou-aqui.png" />
+        <img class="listas" src="/img/tela-inicial/sos-fada-manu.png" />
+        <img class="listas" src="/img/tela-inicial/turma-da-monica.png" />
+        <img class="listas" src="/img/tela-inicial/os-farofeiros.png" />
+        <img class="listas" src="/img/tela-inicial/a-magia-de-aruna.png" />
+        <img class="listas" src="/img/tela-inicial/ainda-estou-aqui.png" />
       </div>
     </div>
   </div>
