--- a/pages/alterar.html
+++ b/pages/alterar.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
-    
+    <div class="background">
+        <form>
+            <div class=" foto">
+                <img src="/img/tela-perfil/perfil.png"/>
+            </div>
+            <label for="Nome de usuario">Nome de usuario</label>
+        </form>
+    </div>
 </body>
 </html>
