barra lateral e perfil 01/09/25

--- a/pages/alterar.html
+++ b/pages/alterar.html
@@ -10,12 +10,24 @@
 </head>
 
 <body>
+    <div class="logo">
+        <img id="logo2" src="/img/logoLongaW.png" />
+    </div>
+     
     <div class="background">
         <form>
             <div class=" foto">
+                <!-- <img id="delete" src="/img/tela-perfil/delete-icon.svg"/> -->
                 <img src="/img/tela-perfil/perfil.png"/>
             </div>
-            <label for="Nome de usuario">Nome de usuario</label>
+            <span class="imutavel">Nome de usuario:</span>
+            <span class="mutavel">Fulano</span>
+            <span class="imutavel">E-mail:</span>
+            <span class="mutavel">fulano@gmail.com</span>
+            <span class="imutavel">senha:</span>
+            <span class="mutavel">010925</span>
+            <button class="editar" type="submit">Editar</button>
+            <button class="remover" type="submit">Remover</button>
         </form>
     </div>
 </body>
