--- a/pages/home.html
+++ b/pages/home.html
@@ -15,8 +15,9 @@
     <div class="logo">
       <img src="/img/logoLongaW.png" />
     </div>
-    <div class=" banner la">
-      <img id="baner1" src="/img/tela-inicial/minha-mae-e-uma-peca.png" />
+    <div id="bannerHeader" class="">
+      <img id="banner1" src="/img/tela-inicial/central-do-brasil.png" />
+      <img id="bannerPrincipal" src="/img/tela-inicial/minha-mae-e-uma-peca.png" />
       <img id="banner2" src="/img/tela-inicial/central-do-brasil.png" />
     </div>
     <div class="listas">
