carrossel de imagens

--- a/pages/home.html
+++ b/pages/home.html
@@ -14,29 +14,46 @@
     <!-- Logo -->
     <div class="logo">
       <img src="/img/logoLongaW.png" />
-    </div>
-    <div id="bannerHeader" class="">
-      <img id="banner1" src="/img/tela-inicial/central-do-brasil.png" />
-      <img id="bannerPrincipal" src="/img/tela-inicial/minha-mae-e-uma-peca.png" />
-      <img id="banner2" src="/img/tela-inicial/central-do-brasil.png" />
-    </div>
-    <div class="listas">
-      <div class="lista">
-        <img class="listas" src="/img/tela-inicial/depois-do-universo.png" />
-        <img class="listas" src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png " />
-        <img class="listas" src="/img/tela-inicial/isolados.png" />
-        <img class="listas" src="/img/tela-inicial/tropa-de-elite.png" />
-        <img class="listas" src="/img/tela-inicial/marginal-alad.png" />
+      <!-- carrosel -->
+      <div class="gallery-wrapper">
+        <!-- Flexa esquerda -->
+        <div class="arrow left">
+          <svg viewBox="0 0 24 24">
+            <path d="M15 18l-6-6 6-6" stroke="#fff" stroke-width="2" fill="none" />
+          </svg>
+        </div>
+
+        <!-- galerinha -->
+        <div class="gallery">
+          <img src="/img/teste3.jpg" alt="Left Image" class="gallery-image left" />
+          <img src="/img/teste3.jpg" alt="Center Image" class="gallery-image center" />
+          <img src="/img/teste3.jpg" alt="Right Image" class="gallery-image right" />
+        </div>
+
+        <!-- flecha direita -->
+        <div class="arrow right">
+          <svg viewBox="0 0 24 24">
+            <path d="M9 6l6 6-6 6" stroke="#fff" stroke-width="2" fill="none" />
+          </svg>
+        </div>
       </div>
-      <div class="lista">
-        <img class="listas" src="/img/tela-inicial/sos-fada-manu.png" />
-        <img class="listas" src="/img/tela-inicial/turma-da-monica.png" />
-        <img class="listas" src="/img/tela-inicial/os-farofeiros.png" />
-        <img class="listas" src="/img/tela-inicial/a-magia-de-aruna.png" />
-        <img class="listas" src="/img/tela-inicial/ainda-estou-aqui.png" />
+      <div class="listas">
+        <div class="lista">
+          <img class="listas" src="/img/tela-inicial/depois-do-universo.png" />
+          <img class="listas" src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png " />
+          <img class="listas" src="/img/tela-inicial/isolados.png" />
+          <img class="listas" src="/img/tela-inicial/tropa-de-elite.png" />
+          <img class="listas" src="/img/tela-inicial/marginal-alad.png" />
+        </div>
+        <div class="lista">
+          <img class="listas" src="/img/tela-inicial/sos-fada-manu.png" />
+          <img class="listas" src="/img/tela-inicial/turma-da-monica.png" />
+          <img class="listas" src="/img/tela-inicial/os-farofeiros.png" />
+          <img class="listas" src="/img/tela-inicial/a-magia-de-aruna.png" />
+          <img class="listas" src="/img/tela-inicial/ainda-estou-aqui.png" />
+        </div>
       </div>
     </div>
-  </div>
   </div>
 </body>
 
