barra lateral completa

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
            <input type="text" placeholder="Digite seu nome de usuario:" id="nome" name="nome" required>
            <label for="senha">Senha do usuário:</label>
            <input type="password" placeholder="Digite sua senha:" id="senha" name="senha" required>
-           <button class="login" type="submit" href="/pages/home.html">Login</button>
+           <a href="/pages/home.html">
+           <button class="login" type="submit">
+            Login
+
+           </button> 
+        </a>
            <a href="pages/cadastro.html">Ainda não tem conta? Cadastre-se aqui</a>
            <a href="/pages/home.html">Esqueceu sua senha?</a>
         </form>
