--- a/pages/alterar.html
+++ b/pages/alterar.html
@@ -8,27 +8,42 @@
     <link rel="icon" type="image/x-icon" href="/img/logo_aba.png" />
     <link rel="stylesheet" href="/css/alterar.css">
 </head>
-
 <body>
-    <div class="logo">
-        <img id="logo2" src="/img/logoLongaW.png" />
+
+    <div class="sidebar">
+        <div class="linhas">
+            <img id="icones " src="/img/barra-lateral/3linhas.png" />
+        </div>
+        <a href="/pages/alterar.html"><img id="icones " src="/img/barra-lateral/user-circle.png" /></a>
+        <img id="icones " src="/img/barra-lateral/lupa-pesquisa.png" />
+        <a href="/pages/home.html"><img id="icones " src="/img/barra-lateral/casa.png" /> </a>
+        <img id="icones " src="/img/barra-lateral/favoritos.png" />
+        <img id="icones " src="/img/barra-lateral/notificacoes.png" />
+        <div class="configuracoes">
+            <img id="icones "  src="/img/barra-lateral/configuracoes.png" />
+        </div>
     </div>
-     
-    <div class="background">
-        <form>
-            <div class=" foto">
-                <!-- <img id="delete" src="/img/tela-perfil/delete-icon.svg"/> -->
-                <img src="/img/tela-perfil/perfil.png"/>
-            </div>
-            <span class="imutavel">Nome de usuario:</span>
-            <span class="mutavel">Fulano</span>
-            <span class="imutavel">E-mail:</span>
-            <span class="mutavel">fulano@gmail.com</span>
-            <span class="imutavel">senha:</span>
-            <span class="mutavel">010925</span>
-            <button class="editar" type="submit">Editar</button>
-            <button class="remover" type="submit">Remover</button>
-        </form>
-    </div>
+    <main>
+        <div class="logo">
+            <img id="logo2" src="/img/logoLongaW.png" />
+        </div>
+        
+        <div class="background">
+            <form>
+                <div class=" foto">
+                    <!-- <img id="delete" src="/img/tela-perfil/delete-icon.svg"/> -->
+                    <img id="usuario" src="/img/tela-perfil/perfil.png"/>
+                </div>
+                <span class="imutavel">Nome de usuario:</span>
+                <span class="mutavel">Fulano</span>
+                <span class="imutavel">E-mail:</span>
+                <span class="mutavel">fulano@gmail.com</span>
+                <span class="imutavel">senha:</span>
+                <span class="mutavel">010925</span>
+                <button class="editar" type="submit">Editar</button>
+                <button class="remover" type="submit">Remover</button>
+            </form>
+        </div>
+    </main>
 </body>
-</html>
+    </html>
