--- a/pages/carrossel.html
+++ b/pages/carrossel.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/carrossel.css" />
+    <link rel="stylesheet" href="/css/home.css" />
+    <link rel="stylesheet" href="/pages/home.html" />
     <title>Static Gallery</title>
 </head>
 
@@ -19,9 +20,9 @@
 
         <!-- galerinha -->
         <div class="gallery">
-            <img src="/img/teste3.jpg" alt="Left Image" class="gallery-image left" />
-            <img src="/img/teste3.jpg" alt="Center Image" class="gallery-image center" />
-            <img src="/img/teste3.jpg" alt="Right Image" class="gallery-image right" />
+            <img src="/img/tela-inicial/central-do-brasil.png" alt="Left Image" class="gallery-image left" />
+            <img src="/img/tela-inicial/minha-mae-e-uma-peca.png" alt="Center Image" class="gallery-image center" />
+            <img src="/img/tela-inicial/ainda-estou-aqui.png" alt="Right Image" class="gallery-image right" />
         </div>
 
         <!-- flecha direita -->
