--- a/pages/home.html
+++ b/pages/home.html
@@ -7,6 +7,7 @@
   <title>RetroCena</title>
   <link rel="icon" type="image/x-icon" href="/img/logo_aba.png" />
   <link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href="/pages/carrossel.html">
 </head>
 
 <body>
@@ -25,9 +26,9 @@
 
         <!-- galerinha -->
         <div class="gallery">
-          <img src="/img/teste3.jpg" alt="Left Image" class="gallery-image left" />
-          <img src="/img/teste3.jpg" alt="Center Image" class="gallery-image center" />
-          <img src="/img/teste3.jpg" alt="Right Image" class="gallery-image right" />
+          <img src="/img/tela-inicial/central-do-brasil.png" alt="Left Image" class="gallery-image left" />
+          <img src="/img/tela-inicial/minha-mae-e-uma-peca.png" alt="Center Image" class="gallery-image center" />
+          <img src="/img/tela-inicial/ainda-estou-aqui.png" alt="Right Image" class="gallery-image right" />
         </div>
 
         <!-- flecha direita -->
