--- a/pages/home.html
+++ b/pages/home.html
@@ -10,27 +10,44 @@
   <link rel="stylesheet" href="/pages/carrossel.html">
 </head>
 
-<body>
+<body> 
+  
+  <div class="sidebar">
+  <div class="linhas">
+      <img id="icones " src="/img/barra-lateral/3linhas.png" />
+  </div>
+  <a href="/pages/alterar.html"><img id="icones " src="/img/barra-lateral/user-circle.png" /></a>
+  <img id="icones " src="/img/barra-lateral/lupa-pesquisa.png" />
+  <a href="/pages/home.html"><img id="icones " src="/img/barra-lateral/casa.png" /> </a>
+  <img id="icones " src="/img/barra-lateral/favoritos.png" />
+  <img id="icones " src="/img/barra-lateral/notificacoes.png" />
+  <div class="configuracoes">
+      <img id="icones "  src="/img/barra-lateral/configuracoes.png" />
+  </div>
+</div>
+<main>
+  
+  <div class="logo">
+    <img src="/img/logoLongaW.png" />
+  </div>
   <div class="flex">
     <!-- Logo -->
-    <div class="logo">
-      <img src="/img/logoLongaW.png" />
-      <!-- carrosel -->
-      <div class="gallery-wrapper">
+    <!-- carrosel -->
+    <div class="gallery-wrapper">
         <!-- Flexa esquerda -->
         <div class="arrow left">
           <svg viewBox="0 0 24 24">
             <path d="M15 18l-6-6 6-6" stroke="#fff" stroke-width="2" fill="none" />
           </svg>
         </div>
-
+        
         <!-- galerinha -->
         <div class="gallery">
           <img src="/img/tela-inicial/central-do-brasil.png" alt="Left Image" class="gallery-image left" />
           <img src="/img/tela-inicial/minha-mae-e-uma-peca.png" alt="Center Image" class="gallery-image center" />
           <img src="/img/tela-inicial/ainda-estou-aqui.png" alt="Right Image" class="gallery-image right" />
         </div>
-
+        
         <!-- flecha direita -->
         <div class="arrow right">
           <svg viewBox="0 0 24 24">
@@ -38,11 +55,11 @@
           </svg>
         </div>
       </div>
-      <div class="listas">
-        <div class="lista">
-          <img class="listas" src="/img/tela-inicial/depois-do-universo.png" />
-          <img class="listas" src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png " />
-          <img class="listas" src="/img/tela-inicial/isolados.png" />
+        <div class="listas">
+          <div class="lista">
+            <img class="listas" src="/img/tela-inicial/depois-do-universo.png" />
+            <img class="listas" src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png " />
+            <img class="listas" src="/img/tela-inicial/isolados.png" />
           <img class="listas" src="/img/tela-inicial/tropa-de-elite.png" />
           <img class="listas" src="/img/tela-inicial/marginal-alad.png" />
         </div>
@@ -54,8 +71,8 @@
           <img class="listas" src="/img/tela-inicial/ainda-estou-aqui.png" />
         </div>
       </div>
-    </div>
   </div>
+</main>
 </body>
 
 </html>
