so pra pegar a versao nova

--- a/pages/home.html
+++ b/pages/home.html
@@ -55,9 +55,12 @@
           </svg>
         </div>
       </div>
-        <div class="listas">
+        <div class="cartao">
           <div class="lista">
             <img class="listas" src="/img/tela-inicial/depois-do-universo.png" />
+            <div>
+              <h1>Depois do universo</h1>
+            </div>
             <img class="listas" src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png " />
             <img class="listas" src="/img/tela-inicial/isolados.png" />
           <img class="listas" src="/img/tela-inicial/tropa-de-elite.png" />
@@ -74,5 +77,4 @@
   </div>
 </main>
 </body>
-
 </html>
