sao 2:40 AM eu n aguento mais

--- a/pages/alterar.html
+++ b/pages/alterar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/img/logo_aba.png" />
     <link rel="stylesheet" href="/css/alterar.css">
 </head>
+
 <body>
 
     <div class="sidebar">
@@ -20,19 +21,19 @@
         <img id="icones " src="/img/barra-lateral/favoritos.png" />
         <img id="icones " src="/img/barra-lateral/notificacoes.png" />
         <div class="configuracoes">
-            <img id="icones "  src="/img/barra-lateral/configuracoes.png" />
+            <img id="icones " src="/img/barra-lateral/configuracoes.png" />
         </div>
     </div>
     <main>
         <div class="logo">
             <img id="logo2" src="/img/logoLongaW.png" />
         </div>
-        
+
         <div class="background">
             <form>
                 <div class=" foto">
                     <!-- <img id="delete" src="/img/tela-perfil/delete-icon.svg"/> -->
-                    <img id="usuario" src="/img/tela-perfil/perfil.png"/>
+                    <img id="usuario" src="/img/tela-perfil/perfil.png" />
                 </div>
                 <span class="imutavel">Nome de usuario:</span>
                 <span class="mutavel">Fulano</span>
@@ -40,10 +41,15 @@
                 <span class="mutavel">fulano@gmail.com</span>
                 <span class="imutavel">senha:</span>
                 <span class="mutavel">010925</span>
-                <button class="editar" type="submit">Editar</button>
-                <button class="remover" type="submit">Remover</button>
+                <a href="/index.html" class="editar">
+                    Editar
+                </a>
+                <a href="/pages/cadastro.html" class="remover">
+                    Remover
+                </a>
             </form>
         </div>
     </main>
 </body>
-    </html>
+
+</html>
