--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -8,20 +8,24 @@
     <link rel="icon" type="image/x-icon" href="/img/logo_aba.png" />
     <link rel="stylesheet" href="/css/cadastro.css">
 </head>
+
 <body>
     <div class="background">
         <div class="background2">
-        <form class="formulario">
-            <div class="logo">
-               <img src="/img/logoLongaW.png" />
-            </div>
-            <label for="email">Endereço de E-mail:</label>
-          <input type="email"  placeholder="Digite seu email:" id="email" name="email" required>
-          <label for="senha">Crie sua senha:</label>
-          <input type="password" placeholder="Digite uma senha:" id="senha" name="senha" required>
-            <button class="cadastro" type="submit">Cadastro</button>
-            <a href="/index.html">Já tem conta? Entre aqui!</a>
+            <form class="formulario">
+                <div class="logo">
+                    <img src="/img/logoLongaW.png" />
+                </div>
+                <label for="email">Endereço de E-mail:</label>
+                <input type="email" placeholder="Digite seu email:" id="email" name="email" required>
+                <label for="senha">Crie sua senha:</label>
+                <input type="password" placeholder="Digite uma senha:" id="senha" name="senha" required>
+                <a href="/pages/home.html" class="cadastro">
+                    Cadastrar
+                </a>
+                <a href="/index.html">Já tem conta? Entre aqui!</a>
         </div>
     </div>
 </body>
+
 </html>
