--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,24 +8,61 @@
     <link rel="icon" type="image/x-icon" href="/img/logo_aba.png" />
     <link rel="stylesheet" href="/css/favoritos.css">
 </head>
+
 <body>
-    <div class="sidebar">
-        <div class="linhas">
-            <img id="icones " src="/img/barra-lateral/3linhas.png" />
-        </div>
-        <a href="/pages/alterar.html"><img id="icones " src="/img/barra-lateral/user-circle.png" /></a>
-        <img id="icones " src="/img/barra-lateral/lupa-pesquisa.png" />
-        <a href="/pages/home.html"><img id="icones " src="/img/barra-lateral/casa.png" /> </a>
-        <img id="icones " src="/img/barra-lateral/favoritos.png" />
-        <img id="icones " src="/img/barra-lateral/notificacoes.png" />
-        <div class="configuracoes">
-            <img id="icones "  src="/img/barra-lateral/configuracoes.png" />
-        </div>
-    </div>
     <main>
         <div class="logo">
             <img id="logo2" src="/img/logoLongaW.png" />
         </div>
+        <div class="flex">
+            <div class="nome">
+                <span class="favoritos">Favoritos</span>
+            </div>
+            <div class="banner">
+                <div class="cartao">
+                    <img id="sombra" src="/img/favoritos/bacurau.png" />
+                    <div class="overlay">
+                        <h1>Bacurau</h1>
+                        <h2>Em Bacurau, um vilarejo do sertão desaparece dos mapas e passa a ser alvo de ataques
+                            misteriosos. <br> Seus moradores se unem para resistir e lutar pela sobrevivência. </h2>
+                        <a class="botao">Assistir</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="lista">
+
+            <img src="/img/favoritos/ainda-estou-aqui.png" />
+            <img src="/img/favoritos/central-do-brasil.png" />
+            <img src="/img/favoritos/cidade-de-deus.png" />
+            <img src="/img/favoritos/que-horas-ela-volta.png" />
+            <img src="/img/favoritos/carandiru.png" />
+        </div>
+
+        <div class="lista">
+            <img src="/img/favoritos/ultima-parada.png" />
+            <img src="/img/favoritos/somos-tao-jovens.png" />
+            <img src="/img/favoritos/o-auto-da-compadecida.png" />
+            <img src="/img/favoritos/pixoto.png" />
+            <img src="/img/favoritos/somos-tao-jovensw.png" />
+        </div>
+
+
+
+        <div class="sidebar">
+            <div class="linhas">
+                <img id="icones " src="/img/barra-lateral/3linhas.png" />
+            </div>
+            <a href="/pages/alterar.html"><img id="icones " src="/img/barra-lateral/user-circle.png" /></a>
+            <img id="icones " src="/img/barra-lateral/lupa-pesquisa.png" />
+            <a href="/pages/home.html"><img id="icones " src="/img/barra-lateral/casa.png" /> </a>
+            <img id="icones " src="/img/barra-lateral/favoritos.png" />
+            <img id="icones " src="/img/barra-lateral/notificacoes.png" />
+            <div class="configuracoes">
+                <img id="icones " src="/img/barra-lateral/configuracoes.png" />
+            </div>
+        </div>
     </main>
 </body>
+
 </html>
