--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -12,25 +12,23 @@
 <body>
     <div class="background">
         <div class="background2">
-        <form class="formulario">
-            <div class="logo">
-            <img src="img/logoLongaW.png" />
-            </div>
-           <label for="nome">Nome de usuário:</label>
-           <input type="text" placeholder="Digite seu nome de usuario:" id="nome" name="nome" required>
-           <label for="senha">Senha do usuário:</label>
-           <input type="password" placeholder="Digite sua senha:" id="senha" name="senha" required>
-           <a href="/pages/home.html">
-           <button class="login" type="submit">
-            Login
-
-           </button> 
-        </a>
-           <a href="pages/cadastro.html">Ainda não tem conta? Cadastre-se aqui</a>
-           <a href="/pages/home.html">Esqueceu sua senha?</a>
-        </form>
+            <form class="formulario">
+                <div class="logo">
+                    <img src="img/logoLongaW.png" />
+                </div>
+                <label for="nome">Nome de usuário:</label>
+                <input type="text" placeholder="Digite seu nome de usuario:" id="nome" name="nome" required>
+                <label for="senha">Senha do usuário:</label>
+                <input type="password" placeholder="Digite sua senha:" id="senha" name="senha" required>
+                <a href="/pages/home.html" class="login">
+                    Login
+                </a>
+                <a href="pages/cadastro.html">Ainda não tem conta? Cadastre-se aqui</a>
+                <a>Esqueceu sua senha?</a>
+            </form>
         </div>
-      </div>
+    </div>
     </div>
 </body>
+
 </html>
