Atualização botoes, ainda tentando mudar as paginas

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -20,10 +20,12 @@
                 <input type="email" placeholder="Digite seu email:" id="email" name="email" required>
                 <label for="senha">Crie sua senha:</label>
                 <input type="password" placeholder="Digite uma senha:" id="senha" name="senha" required>
-                <a href="/pages/home.html" class="cadastro">
+                <button class="btn-cadastrar">
                     Cadastrar
-                </a>
-                <a href="/index.html">Já tem conta? Entre aqui!</a>
+                </button>
+                <button class="btn-pagLogin">
+                    >Já tem conta? Entre aqui!
+                </button>
         </div>
     </div>
 </body>
