tentando fazer crud

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
                 <input type="text" placeholder="Digite seu nome de usuario:" id="nome" name="nome" required>
                 <label for="senha">Senha do usuário:</label>
                 <input type="password" placeholder="Digite sua senha:" id="senha" name="senha" required>
-                <a href="/pages/home.html" class="login">
-                    Login
-                </a>
+                <button onclick="salvarDados()" class="login" type="submit">Login</button>
                 <a href="pages/cadastro.html">Ainda não tem conta? Cadastre-se aqui</a>
                 <a>Esqueceu sua senha?</a>
             </form>
