Criação da nav, ainda incompleto

--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -26,6 +26,7 @@
                 <button class="btn-pagLogin">
                     >Já tem conta? Entre aqui!
                 </button>
+            </form>
         </div>
     </div>
 </body>
