--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <input type="text" placeholder="Digite seu nome de usuario:" id="nome" name="nome" required>
                 <label for="senha">Senha do usuário:</label>
                 <input type="password" placeholder="Digite sua senha:" id="senha" name="senha" required>
-                <button onclick="salvarDados()" class="login" type="submit">Login</button>
+                <button class="login" type="submit">Login</button>
                 <a href="pages/cadastro.html">Ainda não tem conta? Cadastre-se aqui</a>
                 <a>Esqueceu sua senha?</a>
             </form>
