--- a/pages/home.html
+++ b/pages/home.html
@@ -19,27 +19,27 @@
     </div>
 
     <img src="/img/logo_aba.png" alt="logo" class="logo-img"
-            onclick="document.querySelector('.dropdown').classList.toggle('show')" />
-          <ul class="dropdown">
-            <li>
-              <a href="/pages/alterar.html">Informações pessoais</a>
-            </li>
-            <li><a href="#">Configurações</a></li>
-            <li><a href="#">Ajuda</a></li>
-            <li><a href="#">Histórico</a></li>
-          </ul>
-        </div>
-      <ul class="nav-right">
-        <li alt="Início" ><a href="/pages/home.html">Início</a></li>
-        <li ><a href="/pages/favoritos.html">Favoritos</a></li>
-        <li ><a href="">Notificações</a></li>
-      </ul>
-      <div class="nav-right">
-        <div class="pesquisar-container">
-          <input type="search" placeholder="Pesquisar" />
-          <img src="/img/barra-lateral/lupa-pesquisa.png" class="pesquisar-icone" alt="Pesquisar" />
-        </div>
+      onclick="document.querySelector('.dropdown').classList.toggle('show')" />
+    <ul class="dropdown">
+      <li>
+        <a href="/pages/alterar.html">Informações pessoais</a>
+      </li>
+      <li><a href="#">Configurações</a></li>
+      <li><a href="#">Ajuda</a></li>
+      <li><a href="#">Histórico</a></li>
+    </ul>
+    </div>
+    <ul class="nav-right">
+      <li alt="Início"><a href="/pages/home.html">Início</a></li>
+      <li><a href="/pages/favoritos.html">Favoritos</a></li>
+      <li><a href="">Notificações</a></li>
+    </ul>
+    <div class="nav-right">
+      <div class="pesquisar-container">
+        <input type="search" placeholder="Pesquisar" />
+        <img src="/img/barra-lateral/lupa-pesquisa.png" class="pesquisar-icone" alt="Pesquisar" />
       </div>
+    </div>
     <div class="flex">
 
   </header>
@@ -115,6 +115,8 @@
     </div>
     </div>
   </main>
+
+  <script src="/js/home.js"></script>
 </body>
 
 </html>
