--- a/pages/home.html
+++ b/pages/home.html
@@ -12,39 +12,30 @@
 
 <body>
   <header class="hero">
+<div class="nav">
 
-    <!-- Logo -->
-    <div class="logo">
-      <img src="/img/logoLongaW.png" />
+  
+  <!-- Logo -->
+  <div class="logo">
+    <img src="/img/logoLongaW.png" />
+  </div>
+  
+  <ul class="nav-em-partes">
+    <li alt="Início"><a href="/pages/home.html">Início</a></li>
+    <li><a href="/pages/favoritos.html">Favoritos</a></li>
+    <li><a href="">Notificações</a></li>
+  </ul>
+  <div class="nav-em-partes">
+    <div class="pesquisar-container">
+      <input type="search" placeholder="Pesquisar" />
+      <img src="/img/barra-lateral/lupa-pesquisa.png" class="pesquisar-icone" alt="Pesquisar" />
     </div>
-
-    <img src="/img/logo_aba.png" alt="logo" class="logo-img"
-      onclick="document.querySelector('.dropdown').classList.toggle('show')" />
-    <ul class="dropdown">
-      <li>
-        <a href="/pages/alterar.html">Informações pessoais</a>
-      </li>
-      <li><a href="#">Configurações</a></li>
-      <li><a href="#">Ajuda</a></li>
-      <li><a href="#">Histórico</a></li>
-    </ul>
-    </div>
-    <ul class="nav-right">
-      <li alt="Início"><a href="/pages/home.html">Início</a></li>
-      <li><a href="/pages/favoritos.html">Favoritos</a></li>
-      <li><a href="">Notificações</a></li>
-    </ul>
-    <div class="nav-right">
-      <div class="pesquisar-container">
-        <input type="search" placeholder="Pesquisar" />
-        <img src="/img/barra-lateral/lupa-pesquisa.png" class="pesquisar-icone" alt="Pesquisar" />
-      </div>
-    </div>
-    <div class="flex">
-
+  </div>
+</div>
+    
   </header>
   <main>
-
+    
     <div class="lista">
 
       <div class="cartao">
