Alteração de css

--- a/pages/alterar.html
+++ b/pages/alterar.html
@@ -5,25 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RetroCena</title>
-    <link rel="icon" type="image/x-icon" href="/img/logo_aba.png" />
+    <link rel="icon" type="image/x-icon" href="/img/logo_abaW.png" />
     <link rel="stylesheet" href="/css/alterar.css">
 </head>
 
 <body>
 
-    <div class="sidebar">
-        <div class="linhas">
-            <img id="icones " src="/img/barra-lateral/3linhas.png" />
-        </div>
-        <a href="/pages/alterar.html"><img id="icones " src="/img/barra-lateral/user-circle.png" /></a>
-        <img id="icones " src="/img/barra-lateral/lupa-pesquisa.png" />
-        <a href="/pages/home.html"><img id="icones " src="/img/barra-lateral/casa.png" /> </a>
-        <img id="icones " src="/img/barra-lateral/favoritos.png" />
-        <img id="icones " src="/img/barra-lateral/notificacoes.png" />
-        <div class="configuracoes">
-            <img id="icones " src="/img/barra-lateral/configuracoes.png" />
-        </div>
-    </div>
     <main>
         <div class="logo">
             <img id="logo2" src="/img/logoLongaW.png" />
