--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RetroCena</title>
-    <link rel="icon" type="image/x-icon" href="/img/logo_aba.png" />
+    <link rel="icon" type="image/x-icon" href="/img/logo_abaW.png" />
     <link rel="stylesheet" href="/css/cadastro.css">
 </head>
 
@@ -23,11 +23,11 @@
                 <button class="btn-cadastrar">
                     Cadastrar
                 </button>
-                <button class="btn-pagLogin">
-                    >Já tem conta? Entre aqui!
-                </button>
+                
+                <a href="">Já tem conta? Entre aqui!</a>
             </form>
         </div>
+
     </div>
 
     <script src="/js/cadastro.js"></script>
