mudanças no home

--- a/pages/home.html
+++ b/pages/home.html
@@ -39,65 +39,65 @@
     <div class="lista">
 
       <div class="cartao">
-        <img class="cartao" id="funcionapls" src="/img/tela-inicial/depois-do-universo.png" />
-        <div class="overlay2">
+        <img class="section-img" src="/img/tela-inicial/depois-do-universo.png" />
+        <div class="overlay">
           <h1> Depois do universo</h1>
         </div>
       </div>
       <div class="cartao">
-        <img id="funcionapls" src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png " />
-        <div class="overlay3">
+        <img class="section-img" src="/img/tela-inicial/o-cemiterio-das-almas-perdidas.png " />
+        <div class="overlay">
           <h1> O Cemiterio das Almas Perdidas</h1>
         </div>
       </div>
 
       <div class="cartao">
-        <img id="funcionapls" src="/img/tela-inicial/isolados.png" />
-        <div class="overlay4">
+        <img class="section-img" src="/img/tela-inicial/isolados.png" />
+        <div class="overlay">
           <h1> Isolados</h1>
         </div>
       </div>
       <div class="cartao">
-        <img id="funcionapls" src="/img/tela-inicial/tropa-de-elite.png" />
-        <div class="overlay5">
+        <img class="section-img"src="/img/tela-inicial/tropa-de-elite.png" />
+        <div class="overlay">
           <h1> Tropa de Elite</h1>
         </div>
       </div>
       <div class="cartao">
-        <img id="funcionapls" src="/img/tela-inicial/marginal-alad.png" />
-        <div class="overlay6">
+        <img class="section-img" src="/img/tela-inicial/marginal-alad.png" />
+        <div class="overlay">
           <h1> Marginal Alad</h1>
         </div>
       </div>
     </div>
     <div class="lista">
       <div class="cartao">
-        <img id="funcionapls" src="/img/tela-inicial/sos-fada-manu.png" />
-        <div class="overlay7">
+        <img class="section-img" src="/img/tela-inicial/sos-fada-manu.png" />
+        <div class="overlay">
           <h1>SOS Fada Manu</h1>
         </div>
       </div>
       <div class="cartao">
-        <img id="funcionapls" src="/img/tela-inicial/turma-da-monica.png" />
-        <div class="overlay8">
+        <img class="section-img"src="/img/tela-inicial/turma-da-monica.png" />
+        <div class="overlay">
           <h1>Turma da Monica </h1>
         </div>
       </div>
       <div class="cartao">
-        <img id="funcionapls" src="/img/tela-inicial/os-farofeiros.png" />
-        <div class="overlay9">
+        <img class="section-img" src="/img/tela-inicial/os-farofeiros.png" />
+        <div class="overlay">
           <h1>Os Farofeiros</h1>
         </div>
       </div>
       <div class="cartao">
-        <img id="funcionapls" src="/img/tela-inicial/a-magia-de-aruna.png" />
-        <div class="overlay10">
+        <img class="section-img" src="/img/tela-inicial/a-magia-de-aruna.png" />
+        <div class="overlay">
           <h1>A Magia de Aruna</h1>
         </div>
       </div>
       <div class="cartao">
-        <img id="funcionapls" src="/img/tela-inicial/ainda-estou-aqui.png" />
-        <div class="overlay11">
+        <img class="section-img" src="/img/tela-inicial/ainda-estou-aqui.png" />
+        <div class="overlay">
           <h1>Ainda Estou Aqui</h1>
         </div>
       </div>
